-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.8.0 Alpha
-
None
-
b4085e56b9040247393b279f64b8cd63af863798, 0a71cc111ae92cdae604fdb1d4ce0090f1fb6a20
See comments for https://codereview.qt-project.org/#/c/165725/
Breaks with the NVIDIA-supplied DRIVE CX sysroots at least.
Same issue on Raspbian: here - with newer Raspbian versions at least - xi.pc is present but it apparently depends on some missing inputproto stuff, leading to the same end result: xinput2 support is picked up via direct usage, not via pkg-config.
| For Gerrit Dashboard: QTBUG-56017 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 172361,1 | Fix QT_LIBRARY_VERSION usage when pkg-config fails | 5.8 | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 173084,4 | Migrate libinput support away from QT_LIBRARY_VERSION | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 173274,5 | xcb: Drop libXi version check | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |