config.tests/unix/libinput_axis_api/libinput_axis_api.pro
@@ -1,0 +1,2 @@
+SOURCES = libinput_axis_api.cpp
+CONFIG -= qt
